[gd_scene load_steps=29 format=3 uid="uid://c5s14bwibo7lb"]

[ext_resource type="Script" path="res://Scripts/Programs/amplifier_tile.gd" id="1_mxy63"]
[ext_resource type="Texture2D" uid="uid://cqmdw1g6ut6fn" path="res://Sprites/Programs/program_files.png" id="2_5le7p"]
[ext_resource type="Texture2D" uid="uid://ux2n2hrhtnbi" path="res://Sprites/EnvironmentReal/Dumpyard/object_dumpyard_real_sheet.png" id="3_rypoc"]
[ext_resource type="AudioStream" uid="uid://dmldi02tcifo3" path="res://Sounds/Real/chest_open.wav" id="4_1dpt3"]
[ext_resource type="FontFile" uid="uid://dxr68c8ej2ev0" path="res://Sprites/Fonts/LowresPixel-Regular.otf" id="4_vrjts"]
[ext_resource type="Texture2D" uid="uid://bfv5ia5nernhf" path="res://Sprites/UI/Ui_dialgue_box.png" id="4_wl2eg"]
[ext_resource type="AudioStream" uid="uid://2eucm1dk6y7i" path="res://Sounds/Real/chest_ding.wav" id="5_3bi2d"]
[ext_resource type="AudioStream" uid="uid://cda3e6rcnwx28" path="res://Sounds/FX/pick_up.wav" id="6_87df2"]
[ext_resource type="Texture2D" uid="uid://cbr2rnrdjtll5" path="res://Sprites/Programs/programs_icon.png" id="8_8ju5p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofsl2"]
size = Vector2(34, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_puun2"]
atlas = ExtResource("3_rypoc")
region = Rect2(0, 112, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn85a"]
atlas = ExtResource("3_rypoc")
region = Rect2(32, 112, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nv0a"]
atlas = ExtResource("3_rypoc")
region = Rect2(64, 112, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e21nu"]
atlas = ExtResource("3_rypoc")
region = Rect2(0, 144, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b083m"]
atlas = ExtResource("3_rypoc")
region = Rect2(32, 144, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhvda"]
atlas = ExtResource("3_rypoc")
region = Rect2(0, 176, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcph4"]
atlas = ExtResource("3_rypoc")
region = Rect2(32, 176, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxkdw"]
atlas = ExtResource("3_rypoc")
region = Rect2(64, 176, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kofg"]
atlas = ExtResource("3_rypoc")
region = Rect2(0, 208, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_b5h58"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_puun2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn85a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nv0a")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e21nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b083m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhvda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b083m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhvda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcph4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxkdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kofg")
}],
"loop": false,
"name": &"open",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsgkd"]
size = Vector2(26, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_uefnn"]
atlas = ExtResource("8_8ju5p")
region = Rect2(129, 3, 30, 26)

[sub_resource type="Animation" id="Animation_pm8yl"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1.1487, 1.1487),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crcqh"]
_data = {
"new_animation": SubResource("Animation_pm8yl")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_7lu4k"]
atlas = ExtResource("2_5le7p")
region = Rect2(270, 0, 90, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_08df0"]
atlas = ExtResource("4_wl2eg")
region = Rect2(112, 128, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mb3t"]
atlas = ExtResource("4_wl2eg")
region = Rect2(145, 129, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vhq0a"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_08df0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mb3t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="AmplifierTile" type="Area2D"]
z_index = 30
collision_layer = 257
collision_mask = 2
script = ExtResource("1_mxy63")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ofsl2")

[node name="ChestSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b5h58")
autoplay = "default"

[node name="Area2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_rsgkd")

[node name="OpenChest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1dpt3")
pitch_scale = 0.29
bus = &"FX"

[node name="DingChest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3bi2d")
volume_db = -10.0
pitch_scale = 0.95

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_87df2")
bus = &"FX"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 1)
texture = SubResource("AtlasTexture_uefnn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
autoplay = "new_animation"
libraries = {
"": SubResource("AnimationLibrary_crcqh")
}

[node name="PickUp" type="Sprite2D" parent="Sprite2D"]
z_index = 90
scale = Vector2(0.33, 0.33)
texture = SubResource("AtlasTexture_7lu4k")

[node name="NameLabel" type="Label" parent="Sprite2D/PickUp"]
offset_left = -36.0
offset_top = 21.0
offset_right = 326.0
offset_bottom = 113.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_vrjts")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="Sprite2D/PickUp"]
offset_left = 10.0
offset_top = -29.0
offset_right = 170.0
offset_bottom = 198.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_vrjts")
theme_override_font_sizes/font_size = 20
autowrap_mode = 3

[node name="ButtonSprite" type="AnimatedSprite2D" parent="Sprite2D/PickUp"]
visible = false
z_index = 2
position = Vector2(40, 35)
sprite_frames = SubResource("SpriteFrames_vhq0a")
autoplay = "default"

[connection signal="body_entered" from="." to="." method="pick_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
